--- a/package.json
+++ b/package.json
@@ -9,13 +9,32 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-cache-inmemory": "1.3.0",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "1.0.1",
+    "cra-template": "1.1.2",
+    "downshift": "1.18.0",
+    "formik": "^2.2.6",
+    "graphql": "0.11.7",
+    "graphql-tag": "2.5.0",
+    "jwt-decode": "^3.1.2",
+    "mobx": "3.3.1",
+    "mobx-react": "4.3.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "subscriptions-transport-ws": "^0.9.18",
+    "react-apollo": "2.0.1",
+    "react-dropzone": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
