--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.3.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -26,15 +27,15 @@
     "mobx-react": "4.3.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apollo": "1.4.16",
     "react-dom": "^17.0.2",
+    "react-dropzone": "4.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^1.0.1",
     "subscriptions-transport-ws": "^0.9.18",
-    "react-apollo": "1.4.16",
-    "react-dropzone": "4.2.3"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
