--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,4 @@
 {
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "trailingComma": "all",
-  "arrowParens": "always",
-  "printWidth": 140,
-  "semi": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "useTabs": false
 }
