--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "1.0.1",
     "cra-template": "1.1.2",
+    "dayjs": "^1.10.6",
     "downshift": "1.18.0",
+    "emoji-picker-react": "^3.4.8",
     "formik": "^2.2.6",
     "graphql": "0.11.7",
     "graphql-tag": "2.5.0",
     "jwt-decode": "^3.1.2",
     "mobx": "3.3.1",
     "mobx-react": "4.3.3",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-apollo": "2.0.0",
     "react-dom": "^17.0.2",
